@@ -8,6 +8,9 @@ Changelog
 4.0.3 - Unreleased
 ------------------
 
+- Pass on batching hints to the catalog query in `getFolderContents`.
+  [hannosch]
+
 - Make role/permission settings consistent in Plone root
   http://dev.plone.org/plone/ticket/7922
   [tom_gross]
